--- a/gamehall.ui
+++ b/gamehall.ui
@@ -6,27 +6,699 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>1200</width>
+    <height>831</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <widget class="QUndoView" name="undoView_4">
+   <property name="geometry">
+    <rect>
+     <x>1045</x>
+     <y>20</y>
+     <width>141</width>
+     <height>781</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QScrollBar" name="verticalScrollBar">
+   <property name="geometry">
+    <rect>
+     <x>1020</x>
+     <y>20</y>
+     <width>16</width>
+     <height>781</height>
+    </rect>
+   </property>
+   <property name="maximum">
+    <number>100</number>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="avatar">
+   <property name="geometry">
+    <rect>
+     <x>1080</x>
+     <y>30</y>
+     <width>70</width>
+     <height>70</height>
+    </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::NoFrame</enum>
+   </property>
+   <property name="text">
+    <string>头像</string>
+   </property>
+  </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>64</x>
-     <y>102</y>
-     <width>91</width>
-     <height>51</height>
+     <x>1080</x>
+     <y>130</y>
+     <width>80</width>
+     <height>80</height>
     </rect>
    </property>
    <property name="text">
-    <string>开始游戏</string>
+    <string>功能1</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>1080</x>
+     <y>230</y>
+     <width>80</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>功能2</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_3">
+   <property name="geometry">
+    <rect>
+     <x>1080</x>
+     <y>540</y>
+     <width>80</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>功能5</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_4">
+   <property name="geometry">
+    <rect>
+     <x>1080</x>
+     <y>440</y>
+     <width>80</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>功能4</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_5">
+   <property name="geometry">
+    <rect>
+     <x>1080</x>
+     <y>340</y>
+     <width>80</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>功能3</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="hall" native="true">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>20</y>
+     <width>990</width>
+     <height>1041</height>
+    </rect>
+   </property>
+   <widget class="HallBtn" name="lol">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>640</y>
+      <width>90</width>
+      <height>100</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>英雄联盟</string>
+    </property>
+    <property name="toolButtonStyle">
+     <enum>Qt::ToolButtonTextUnderIcon</enum>
+    </property>
+   </widget>
+   <widget class="HallBtn" name="zhuoqiu">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>510</y>
+      <width>90</width>
+      <height>100</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>腾讯桌球</string>
+    </property>
+    <property name="toolButtonStyle">
+     <enum>Qt::ToolButtonTextUnderIcon</enum>
+    </property>
+   </widget>
+   <widget class="HallBtn" name="sgs">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>640</y>
+      <width>90</width>
+      <height>100</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>三国杀</string>
+    </property>
+    <property name="toolButtonStyle">
+     <enum>Qt::ToolButtonTextUnderIcon</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="left">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>187</y>
+      <width>75</width>
+      <height>75</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>&lt;按钮</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="autoDefault">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="HallBtn" name="chuanqi">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>640</y>
+      <width>90</width>
+      <height>100</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>传奇</string>
+    </property>
+    <property name="toolButtonStyle">
+     <enum>Qt::ToolButtonTextUnderIcon</enum>
+    </property>
+   </widget>
+   <widget class="HallBtn" name="chat">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>510</y>
+      <width>90</width>
+      <height>100</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>你画我猜</string>
+    </property>
+    <property name="toolButtonStyle">
+     <enum>Qt::ToolButtonTextUnderIcon</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="searchIcon">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>10</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::NoFrame</enum>
+    </property>
+    <property name="text">
+     <string>搜索</string>
+    </property>
+   </widget>
+   <widget class="HallBtn" name="ayqj">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>640</y>
+      <width>90</width>
+      <height>100</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>暗夜奇迹</string>
+    </property>
+    <property name="toolButtonStyle">
+     <enum>Qt::ToolButtonTextUnderIcon</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="rank">
+    <property name="geometry">
+     <rect>
+      <x>745</x>
+      <y>55</y>
+      <width>221</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::NoFrame</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="right">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>187</y>
+      <width>75</width>
+      <height>75</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>&gt;按钮</string>
+    </property>
+   </widget>
+   <widget class="HallBtn" name="fiveline">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>510</y>
+      <width>90</width>
+      <height>100</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>五子棋</string>
+    </property>
+    <property name="popupMode">
+     <enum>QToolButton::DelayedPopup</enum>
+    </property>
+    <property name="toolButtonStyle">
+     <enum>Qt::ToolButtonTextUnderIcon</enum>
+    </property>
+    <property name="autoRaise">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QWidget" name="widget_3" native="true">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>109</y>
+      <width>256</width>
+      <height>921</height>
+     </rect>
+    </property>
+    <widget class="rankLbabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>1. 五子棋</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>2. 天天象棋</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>190</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>4. 超级台球大师</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>310</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>6. 原始传奇</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_6">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>130</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>3. 逃跑吧！少年</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_7">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>250</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>5. 巅峰坦克</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>370</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>7. 三国杀</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_9">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>430</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>8. 塔防精灵</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_10">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>490</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>9. 梦幻花园</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_11">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>550</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>10. 蛇蛇争霸</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_12">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>670</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>12. 侠客梦</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_13">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>790</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>14. 欢乐麻将</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_14">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>730</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>13. 梦幻家园</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_15">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>610</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>11. 圣杯传奇</string>
+     </property>
+    </widget>
+    <widget class="rankLbabel" name="label_16">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>850</y>
+       <width>236</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>15. 大道争锋</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="Gif_Label" name="gif">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>700</width>
+      <height>450</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string>gif</string>
+    </property>
+   </widget>
+   <widget class="QUndoView" name="undoView_3">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>0</y>
+      <width>256</width>
+      <height>1031</height>
+     </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::StrongFocus</enum>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
+   <widget class="HallBtn" name="hlddz">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>510</y>
+      <width>90</width>
+      <height>100</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>欢乐斗地主</string>
+    </property>
+    <property name="toolButtonStyle">
+     <enum>Qt::ToolButtonTextUnderIcon</enum>
+    </property>
+   </widget>
+   <widget class="QUndoView" name="undoView_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>480</y>
+      <width>701</width>
+      <height>551</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QUndoView" name="undoView">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>701</width>
+      <height>451</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="searchEdit">
+    <property name="geometry">
+     <rect>
+      <x>750</x>
+      <y>10</y>
+      <width>221</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>楷体</family>
+      <pointsize>11</pointsize>
+      <italic>true</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="frame">
+     <bool>true</bool>
+    </property>
+    <property name="placeholderText">
+     <string>查找游戏(例如“斗地主”)</string>
+    </property>
+    <property name="cursorMoveStyle">
+     <enum>Qt::LogicalMoveStyle</enum>
+    </property>
+   </widget>
+   <zorder>undoView_3</zorder>
+   <zorder>undoView_2</zorder>
+   <zorder>undoView</zorder>
+   <zorder>lol</zorder>
+   <zorder>zhuoqiu</zorder>
+   <zorder>sgs</zorder>
+   <zorder>chuanqi</zorder>
+   <zorder>chat</zorder>
+   <zorder>ayqj</zorder>
+   <zorder>rank</zorder>
+   <zorder>fiveline</zorder>
+   <zorder>widget_3</zorder>
+   <zorder>gif</zorder>
+   <zorder>hlddz</zorder>
+   <zorder>searchEdit</zorder>
+   <zorder>searchIcon</zorder>
+   <zorder>left</zorder>
+   <zorder>right</zorder>
+  </widget>
+  <widget class="QPushButton" name="test">
+   <property name="geometry">
+    <rect>
+     <x>1080</x>
+     <y>100</y>
+     <width>80</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>幼圆</family>
+    </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="text">
+    <string>上传头像</string>
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>HallBtn</class>
+   <extends>QToolButton</extends>
+   <header location="global">hallbtn.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Gif_Label</class>
+   <extends>QLabel</extends>
+   <header>gif_label.h</header>
+  </customwidget>
+  <customwidget>
+   <class>rankLbabel</class>
+   <extends>QLabel</extends>
+   <header>ranklbabel.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
