--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -89,22 +89,6 @@
       <height>401</height>
      </rect>
     </property>
-    <widget class="QLineEdit" name="lineEdit_1">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>150</y>
-       <width>220</width>
-       <height>35</height>
-      </rect>
-     </property>
-     <property name="placeholderText">
-      <string>input your usernames</string>
-     </property>
-     <property name="cursorMoveStyle">
-      <enum>Qt::LogicalMoveStyle</enum>
-     </property>
-    </widget>
     <widget class="QLineEdit" name="lineEdit_2">
      <property name="geometry">
       <rect>
@@ -210,6 +194,19 @@
      </property>
      <property name="text">
       <string>记住密码</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_1">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>150</y>
+       <width>220</width>
+       <height>35</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>input your username</string>
      </property>
     </widget>
    </widget>
