--- a/loginwindow.ui
+++ b/loginwindow.ui
@@ -67,7 +67,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>60</y>
+      <y>20</y>
       <width>220</width>
       <height>31</height>
      </rect>
@@ -79,14 +79,14 @@
      <set>Qt::ImhNone</set>
     </property>
     <property name="placeholderText">
-     <string>input your usernames</string>
+     <string>input your username</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="getpwd">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>110</y>
+      <y>70</y>
       <width>220</width>
       <height>31</height>
      </rect>
@@ -102,7 +102,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>220</y>
+      <y>225</y>
       <width>220</width>
       <height>30</height>
      </rect>
@@ -115,20 +115,20 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>42</y>
+      <y>0</y>
       <width>81</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Usernames:</string>
+     <string>Username:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_pwd">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>92</y>
+      <y>50</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -149,30 +149,30 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QLineEdit" name="getname">
+   <widget class="QLineEdit" name="get_email">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>160</y>
+      <y>120</y>
       <width>220</width>
       <height>31</height>
      </rect>
     </property>
     <property name="placeholderText">
-     <string>input your name</string>
+     <string>input your email</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_name">
+   <widget class="QLabel" name="label_email">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>143</y>
+      <y>100</y>
       <width>53</width>
       <height>15</height>
      </rect>
     </property>
     <property name="text">
-     <string>Name:</string>
+     <string>Email:</string>
     </property>
    </widget>
    <widget class="QPushButton" name="back">
@@ -192,27 +192,75 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>192</y>
+      <y>203</y>
       <width>221</width>
-      <height>31</height>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>judge</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="get_code">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>170</y>
+      <width>220</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="placeholderText">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_code">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>150</y>
+      <width>53</width>
+      <height>15</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>验证码：</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="send">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>150</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string>发送验证码</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QWidget" name="widget_2" native="true">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>250</x>
      <y>10</y>
-     <width>241</width>
-     <height>111</height>
+     <width>251</width>
+     <height>101</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
      <widget class="QLabel" name="label_wcm">
       <property name="text">
        <string>TextLabel</string>
