--- a/res.qrc
+++ b/res.qrc
@@ -33,5 +33,8 @@
         <file>res/pikaqiu.jpg</file>
         <file>res/Searchresults.png</file>
         <file>res/cantfind.png</file>
+        <file>res/Warrior.jpg</file>
+        <file>res/sjsj.png</file>
+        <file>res/zmxy.png</file>
     </qresource>
 </RCC>
