--- a/download.ui
+++ b/download.ui
@@ -23,36 +23,26 @@
     </rect>
    </property>
    <property name="value">
-    <number>24</number>
+    <number>0</number>
    </property>
    <property name="textVisible">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="finished">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>120</y>
-     <width>91</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>下载完成</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="stop">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>80</y>
+     <x>120</x>
+     <y>100</y>
      <width>91</width>
      <height>31</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
-    <string>暂停</string>
+    <string>下载完成</string>
    </property>
   </widget>
  </widget>
