--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -109,10 +109,13 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>280</y>
+       <y>300</y>
        <width>220</width>
        <height>35</height>
       </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="text">
       <string>Login</string>
@@ -122,10 +125,13 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>340</y>
+       <y>360</y>
        <width>220</width>
        <height>35</height>
       </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="text">
       <string>Register</string>
@@ -174,7 +180,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>320</y>
+       <y>340</y>
        <width>151</width>
        <height>16</height>
       </rect>
@@ -192,6 +198,9 @@
        <height>19</height>
       </rect>
      </property>
+     <property name="cursor">
+      <cursorShape>ArrowCursor</cursorShape>
+     </property>
      <property name="text">
       <string>记住密码</string>
      </property>
@@ -207,6 +216,19 @@
      </property>
      <property name="placeholderText">
       <string>input your username</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="judge">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>275</y>
+       <width>221</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>judge</string>
      </property>
     </widget>
    </widget>
