--- a/removey.ui
+++ b/removey.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>323</width>
-    <height>210</height>
+    <width>194</width>
+    <height>128</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>80</y>
+     <x>50</x>
+     <y>30</y>
      <width>71</width>
      <height>20</height>
     </rect>
@@ -32,14 +32,17 @@
   <widget class="QPushButton" name="OK">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>120</y>
+     <x>50</x>
+     <y>70</y>
      <width>75</width>
      <height>23</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
-    <string>确定</string>
+    <string>OK</string>
    </property>
   </widget>
  </widget>
